Fixed logo bug
Fixes the bug where the logo and heading text would overlap on the Results and Entries pages.

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -26,20 +26,10 @@ body {
     flex-grow: 1;
 }
 .logo {
-    width: 320px;
-    padding: 9px;
-    font-size: 29px;
-    text-align: right;
-    font-weight: bold;
-    background-size: contain;
-    color: #0A2A66;
-    background-image: url(/static/images/ka-logo.png);
-    background-position: left center;
-    background-repeat: no-repeat;
-    text-decoration: none;
+    width: 50%;
 }
 .logo:hover {
-    text-decoration: none;
+    cursor: pointer;
 }
 .nav.user {
     position: relative;
